# hid-recorder

./: .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
hid-recorder/: Cargo.toml
hid-recorder/src/: main.rs
hid-replay/: Cargo.toml
hid-replay/src/: main.rs
src/: binary.rs  hidraw.rs  hidrecording.rs  libinput.rs  main.rs  numberarray.rs
src/bpf/: .gitignore  hidrecord.bpf.c  hidrecord.h  hidrecord.skel.rs  hidrecord_tracing.bpf.c  hidrecord_tracing.default.skel.rs  vmlinux.h
