[package]
name = "hid-recorder"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hidutils"
repository = "https://github.com/hidutils/hid-recorder"
description = "HID Report recorder utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.4", features = ["derive"] }
libc = "0.2.153"
nix = { version = "0.28.0", features = ["poll"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
chrono = "0.4.38"
hidreport = "0.4.0"
hut = "0.2.0"
human-sort = "0.2.2"
