[package]
name = "hid-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
uhid-virt = "0.0.7"
glob = "0.3.1"
nix = "0.28.0"
